fix p2 error and make revisible

--- a/style.css
+++ b/style.css
@@ -421,7 +421,7 @@ nav.active .nav-links li:hover a{
     height: 400vh;
     width: 100%;
 }
-.p1{
+.p1,.p2{
     width: 100%;
     height: 53vh;
     position: relative;
@@ -446,7 +446,7 @@ nav.active .nav-links li:hover a{
     }
 }
 
-.p1.active{
+.p1.active, .p2.active{
     animation: 1s anim-p1-in 1;
     opacity: 1;
 }
@@ -472,15 +472,15 @@ nav.active .nav-links li:hover a{
     display:block;
 }
 }
-.p1Left{
+.p1Left, .p2Left{
     height: 53vh;
     width: 45vw;
 }
-.p1ImgDiv{
+.p1ImgDiv,.p2ImgDiv{
     height: 45vh;
     width: 100%;
 }
-.p1ImgDiv img{
+.p1ImgDiv img, .p2ImgDiv img{
     border-style: solid;
     margin-left: 5%;
     position: absolute;
